testsuite/tests/typecheck/should_fail/T16059c.hs
module T16059c where

import T16059b

f :: Foo -> a -> f
f g x = g x
